--- a/Bedtimestory/app/src/main/res/layout/activity_bookmark.xml
+++ b/Bedtimestory/app/src/main/res/layout/activity_bookmark.xml
@@ -22,12 +22,12 @@
     </android.support.design.widget.AppBarLayout>
 
     <ListView
+        android:id="@+id/favRec"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/favRec"
+        android:layout_margin="5dp"
         android:background="#fff"
         android:divider="#fff"
-        android:scrollbars="none"
-        android:layout_margin="5dp"></ListView>
+        android:scrollbars="none"></ListView>
 
 </LinearLayout>
